<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#EEEDF2"
    android:layout_height="match_parent">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_arrow_back"
            android:layout_centerVertical="true"
            android:id="@+id/imageViewBack"
            android:layout_marginStart="@dimen/_8sdp"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_14sdp"
            android:text="@string/about"
            android:textStyle="bold"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@android:color/darker_gray"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="@dimen/_6sdp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/version"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_centerVertical="true"
                android:id="@+id/textViewVersion"
                android:layout_toStartOf="@+id/ivArrowVersion"
                android:textColor="@android:color/black"/>


            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:id="@+id/ivArrowVersion"
                android:src="@drawable/ic_arrow_right"
                app:tint="@android:color/black" />


        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@android:color/darker_gray"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/report_problem"/>




            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:id="@+id/ivArrowReport"
                android:src="@drawable/ic_arrow_right"
                app:tint="@android:color/black" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:id="@+id/rlTellOthers"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/tell_others_about_zoom"/>




            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_right"
                app:tint="@android:color/black" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/rlRate"
            android:padding="@dimen/_6sdp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/rate_zoom"/>




            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_right"
                app:tint="@android:color/black" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:id="@+id/rlPrivacyPolicy"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/privacy_policy"/>




            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_right"
                app:tint="@android:color/black" />


        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@android:color/darker_gray"/>




    </LinearLayout>


</LinearLayout>